objects/Contact.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__W7_Exception_1a_Partner_EIN_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</description>
        <inlineHelpText>The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</inlineHelpText>
        <label>W7 Exception 1a Partnership EIN Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Foreign_Military_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>W7 Foreign Military ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. This field is used to specify the external ID / LookupKey for the contact record. ( A unique identifier )</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Event_Employment_Change__c</fullName>
        <description>Field that will update the date whenever the employer field changes.  NATALIE CONTACT CHANGE.</description>
        <label>Life Event-Employment Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Accreditation_Review__c</fullName>
        <defaultValue>TODAY() + 365</defaultValue>
        <label>Next Accreditation Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductLink__c</fullName>
        <label>ProductLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Residency_Detail__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Residency Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Renter</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Loan_Amount_Verifcation__c</fullName>
        <label>Student Loan Amount Verifcation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$50-$74</fullName>
                </value>
                <value>
                    <fullName>$75-$99</fullName>
                </value>
                <value>
                    <fullName>$100-$124</fullName>
                </value>
                <value>
                    <fullName>$125-$149</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Loan_Verification__c</fullName>
        <label>Student Loan Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citi Student Loans</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Fedloan Servicing</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Birth_City__c</fullName>
        <description>Users select the birth state and enter the birth city of the account holder.</description>
        <inlineHelpText>Users select the birth state and enter the birth city of the account holder.</inlineHelpText>
        <label>Birth City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WKDDP__Birth_State__c</fullName>
        <description>Users select the birth state and enter the birth city of the account holder.</description>
        <inlineHelpText>Select the birth state and enter the birth city of the account holder.</inlineHelpText>
        <label>Birth State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>North Dakota</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Employer_City__c</fullName>
        <description>Users enter the city of the primary employer for the account holder in this optional text field.</description>
        <inlineHelpText>Enter the city of the account holder&apos;s primary employer.</inlineHelpText>
        <label>Employer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WKDDP__Form_W7_Dependent_US_Citizen_Name__c</fullName>
        <description>Users populate this optional text field with the name of the individual the account holder is dependent upon for the IRA Application for Individual Taxpayer Identification Number, usually their spouse.</description>
        <inlineHelpText>Enter the name of the account holder&apos;s spouse, or who they&apos;re dependent on for the IRA Application for Individual Taxpayer Identification Number.</inlineHelpText>
        <label>Form W7 Dependent US Citizen Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WKDDP__Form_W7_Dependent_US_Citizen_SSN__c</fullName>
        <description>Users populate this optional text field with the SSN of the individual the account holder is dependent upon for the IRA Application for Individual Taxpayer Identification Number, usually their spouse.</description>
        <inlineHelpText>Enter the SSN of the account holder&apos;s spouse, or who they&apos;re dependent on for the IRA Application for Individual Taxpayer Identification Number.</inlineHelpText>
        <label>Form W7 Dependent US Citizen SSN</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>WKDDP__Form_W7_ITIN_Application_Type__c</fullName>
        <description>Users select a value from this optional picklist to indicate the type of IRS ITIN application needed for the non-US person account holder.</description>
        <inlineHelpText>Select the type of IRS ITIN application needed for the non-US person account holder.</inlineHelpText>
        <label>Form W7 ITIN Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None (No Form Needed)</fullName>
                </value>
                <value>
                    <fullName>New ITIN Application</fullName>
                </value>
                <value>
                    <fullName>Renewal of Existing ITIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>life_Event_Address_Change__c</fullName>
        <description>This field populates the current date when the Home Street field is updated.  NATALIE CONTACT CHANGE</description>
        <label>Life Event-Address Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__Block_Credit_Score_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is check, credit score retrieval is disabled</inlineHelpText>
        <label>Block Credit Score Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__Bulk_Credit_Retrieval_Status__c</fullName>
        <label>Bulk Credit Retrieval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Contact_Deal_Target__c</fullName>
        <label>Campaign Target Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Credit_Retrieval_Status__c</fullName>
        <label>Credit Retrieval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Financials_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financials Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Undisclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__Last_Credit_Pull_Date__c</fullName>
        <description>Date of the last credit pull.</description>
        <label>Last Credit Pull Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nCBC__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__LobLegacyKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>LobLegacyKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nCBC__NetConnect_Pull_Date__c</fullName>
        <inlineHelpText>The date on which a credit report was ran</inlineHelpText>
        <label>Credit Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Survey_Status__c</fullName>
        <inlineHelpText>110: Closing Survey Queued
801: Closing Survey Sent</inlineHelpText>
        <label>Survey Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nCBC__Trade_Show__c</fullName>
        <label>Trade Show</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NFDA</fullName>
                </value>
                <value>
                    <fullName>ICCFA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Alien_Registration_Number__c</fullName>
        <description>Alien Registration Number of the person.</description>
        <inlineHelpText>Alien Registration Number of the person.</inlineHelpText>
        <label>Alien Registration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Alternative_Email__c</fullName>
        <description>Alternative Email Address</description>
        <inlineHelpText>Alternative Email Address</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_Accounts_And_Notes_Receivable__c</fullName>
        <description>Assets Accounts And Notes Receivable</description>
        <inlineHelpText>Assets Accounts And Notes Receivable</inlineHelpText>
        <label>Accounts And Notes Receivable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_Automobiles__c</fullName>
        <description>Assets Automobiles</description>
        <inlineHelpText>Assets Automobiles</inlineHelpText>
        <label>Automobiles</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_Cash__c</fullName>
        <description>Assets Cash</description>
        <inlineHelpText>Assets Cash</inlineHelpText>
        <label>Cash</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_IRA_Or_Other_Retirement_Account__c</fullName>
        <description>Assets IRA Or Other Retirement Account</description>
        <inlineHelpText>Assets IRA Or Other Retirement Account</inlineHelpText>
        <label>IRA Or Other Retirement Account</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_Other_Assets__c</fullName>
        <description>Assets Other Assets</description>
        <inlineHelpText>Other Assets</inlineHelpText>
        <label>Other Assets</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_Other_Personal_Property__c</fullName>
        <description>Assets Other Personal Property</description>
        <inlineHelpText>Assets Other Personal Property</inlineHelpText>
        <label>Other Personal Property</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Assets_Savings_Accounts__c</fullName>
        <description>Assets Savings Accounts</description>
        <inlineHelpText>Assets Savings Accounts</inlineHelpText>
        <label>Savings Accounts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Background Check</description>
        <label>Background Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Birth_City__c</fullName>
        <description>The City where the borrower person was born.</description>
        <inlineHelpText>The City where the borrower person was born.</inlineHelpText>
        <label>Birth City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Birth_Country__c</fullName>
        <description>The Country where the borrower person was born.</description>
        <inlineHelpText>The Country where the borrower person was born.</inlineHelpText>
        <label>Birth Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Birth_State__c</fullName>
        <description>The State where the borrower person was born.</description>
        <inlineHelpText>The State where the borrower person was born.</inlineHelpText>
        <label>Birth State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Case_Verification_Number__c</fullName>
        <description>Case Verification Number - Form G-845</description>
        <label>Case Verification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Charge_Is_Single_Misdemeanor_Dropped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The charge resulting in a “yes” answer was a single misdemeanor that was subsequently dropped without prosecution and Lender has documentation from the appropriate court or prosecutor’s office showing that the charge was dropped.</description>
        <label>Charge Is Single Misdemeanor Dropped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Charged_Arrested_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this person has been charged or arrested for any criminal offense.</description>
        <inlineHelpText>Indicates if this person has been charged or arrested for any criminal offense.</inlineHelpText>
        <label>Charged Arrested Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Cont_Liab_As_Endorser_Or_Co_Maker__c</fullName>
        <description>Contingent Liabilities As Endorser Or Co Maker</description>
        <inlineHelpText>As Endorser Or Co Maker</inlineHelpText>
        <label>As Endorser Or Co Maker</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Contingent_Liab_Federal_Income_Tax__c</fullName>
        <description>Contingent Liabilities Provision For Federal Income Tax</description>
        <inlineHelpText>Contingent Liabilities Provision For Federal Income Tax</inlineHelpText>
        <label>Provision For Federal Income Tax</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Contingent_Liabilities_Legal_Claims__c</fullName>
        <description>Contingent Liabilities Legal Claims And Judgments</description>
        <inlineHelpText>Legal Claims And Judgments</inlineHelpText>
        <label>Legal Claims And Judgments</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Contingent_Liabilities_Other_Debt__c</fullName>
        <description>Contingent Liabilities Other Special Debt</description>
        <inlineHelpText>Other Special Debt</inlineHelpText>
        <label>Other Special Debt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Convicted_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this person has been convicted of a criminal offense, placed on pretrial diversion, or on any form of probation</description>
        <inlineHelpText>Indicates if this person has been convicted of a criminal offense, placed on pretrial diversion, or on any form of probation</inlineHelpText>
        <label>Convicted Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Date_Of_Personal_Financial_Statement__c</fullName>
        <description>Date on applicant&apos;s personal financial statements</description>
        <inlineHelpText>Date on applicant&apos;s personal financial statements</inlineHelpText>
        <label>Date of Personal Financial Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Document_Containing_Other_Immigration_Nu__c</fullName>
        <description>Identify document containing the other immigration number - Form G-845</description>
        <label>Document Containing Other Immigration Nu</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Does_Not_Have_Non_Compete_With_Name__c</fullName>
        <description>Name of competitor that contact needs to provide evidence that it does not have non-compete with. This field is used in Loan Authorization only.</description>
        <inlineHelpText>Name of competitor that contact needs to provide evidence that it does not have non-compete with. This field is used in Loan Authorization only.</inlineHelpText>
        <label>Does Not Have Non Compete With Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Drivers_License_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Driver&apos;s License/ID</description>
        <label>Drivers License ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Education_Grant_Loan_Work_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Education Grant/Loan/Work Study</description>
        <label>Education Grant Loan Work Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Employment_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Employment Authorization</description>
        <label>Employment Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Ethnicity__c</fullName>
        <description>A code that identifies the contact&apos;s ethnicity</description>
        <inlineHelpText>A code that identifies the contact&apos;s ethnicity</inlineHelpText>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HN</fullName>
                </value>
                <value>
                    <fullName>HY</fullName>
                </value>
                <value>
                    <fullName>UN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Federal_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this person is a federal employee.</description>
        <inlineHelpText>Indicates if this person is a federal employee.</inlineHelpText>
        <label>Federal Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Food_Stamps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Food Stamps</description>
        <label>Food Stamps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1919_Signature_Date__c</fullName>
        <description>Date of signature for SBA Form 1919</description>
        <label>Form 1919 Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_413_Signature_Date__c</fullName>
        <description>Date of Signing Form 413</description>
        <inlineHelpText>Date of Signing Form 413</inlineHelpText>
        <label>Form 413 Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_413_Spouse_Signature_Date__c</fullName>
        <description>Date of Signing Form 413 by Spouse</description>
        <inlineHelpText>Date of Signing Form 413 by Spouse</inlineHelpText>
        <label>Form 413 Spouse Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_413_Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Include other individual on this personal financial statement</description>
        <inlineHelpText>Include other individual on this personal financial statement</inlineHelpText>
        <label>Form 413 Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_4506T_Joint_Return_Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a joint return please select spouse</description>
        <label>Joint Return Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Return Spouse</relationshipLabel>
        <relationshipName>Return_Spouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_912_Signature_Date__c</fullName>
        <description>Date of signature for SBA Form 912</description>
        <label>Form 912 Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_G845_Lender_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Official lender. Used to complete Form G845.</description>
        <inlineHelpText>Official lender. Used to complete Form G845.</inlineHelpText>
        <label>Form G845 Lender Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_G845_Signature_Date__c</fullName>
        <description>Date Form G-845 was filled in</description>
        <label>Form G845 Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Gender__c</fullName>
        <description>A code that identifies the contact&apos;s gender</description>
        <inlineHelpText>A code that identifies the contact&apos;s gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Home_Country_Code__c</fullName>
        <label>Home Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Home_Foreign_Code__c</fullName>
        <description>The Foreign Postal code where the borrower is located if the Country is not US.</description>
        <inlineHelpText>The Foreign Postal code where the borrower is located if the Country is not US.</inlineHelpText>
        <label>Home Foreign Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Home_Foreign_State_Name__c</fullName>
        <description>The Foreign State/Province Name where the borrower is located if the Country is not US.</description>
        <inlineHelpText>The Foreign State/Province Name where the borrower is located if the Country is not US.</inlineHelpText>
        <label>Home Foreign State Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Housing_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Housing Assistance</description>
        <label>Housing Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__I94_Arrival_Departure_Record_Number__c</fullName>
        <description>I-94 (Arrival-Departure Record) Number - Form G-845</description>
        <label>I94 Arrival Departure Record Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Alien_Status_Verified_By_USCIS_Or_SBA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Alien status has been verified by USCIS or SBA</description>
        <label>Is Alien Status Verified By USCIS Or SBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Certified_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the lender&apos;s certification of the principal&apos;s veteran status. Specific documentation required.</description>
        <inlineHelpText>This is the lender&apos;s certification of the principal&apos;s veteran status. Specific documentation required.</inlineHelpText>
        <label>Is Certified Veteran</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>